--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- viewport -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- styles -->
-        <link rel="stylesheet" href="./styles/style.css" type="text/css">
+        <link rel="stylesheet" href="./styles/test.css" type="text/css">
         <!-- icons -->
         <link rel="icon" href="favicon.png"> <!--32х32-->
         <link rel="apple-touch-icon" href="./src/icons/touch-icon-iphone.png"> <!--60х60-->
@@ -35,6 +35,7 @@
     <body>
 
         <!-- scripts -->
+        <script src="./js/phones.js"></script>
         <script src="./js/main.js"></script>
     </body>
 </html>
